# glbg

./: LICENSE  README.md  example.toml  frag_pref.glsl  link_bin  meson.build  vert.glsl  zeroterm
include/: glbg.h
include/render/: shadertoy.h
shaders/: final_flower.glsl  final_flower_dark.glsl  shadertoy_tutorial.glsl  spiral.glsl
src/: main.c
src/render/: shadertoy.c
